# pyproject.toml - ComfyUI Data Manager 项目配置
#
# 统一配置 Python 开发工具:
# - Black: 代码格式化
# - isort: 导入排序
# - flake8: 代码检查
# - pytest: 测试框架

[project]
name = "ComfyUI_Data_Manager"
version = "1.0.0"
description = "ComfyUI 数据管理扩展"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

# ============================================================================
# Black 配置 - Python 代码格式化
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # 排除目录
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''
# 双引号优先
skip-string-normalization = false

# ============================================================================
# isort 配置 - 导入排序
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["backend"]
known_third_party = ["aiohttp", "comfy_api"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

# ============================================================================
# flake8 配置 - 代码检查
# ============================================================================
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]  # 与 Black 兼容
max-complexity = 15
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "node_modules",
]
per-file-ignores = [
    "__init__.py:F401",  # 允许 __init__.py 中的未使用导入
]

# ============================================================================
# pytest 配置
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

# ============================================================================
# coverage 配置
# ============================================================================
[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
